# budget-tracker-bot

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
src/: config.py  main.py
src/bot/: telegram_bot.py
src/bot/handlers/: __init__.py  commands.py  export_conversation.py  tracker_conversation.py
src/bot/utils/: __init__.py  decorators.py  functions.py  keyboards.py
src/db/: base_database.py  sqlite_db.py
src/static/: lang.json
src/utils/: functions.py  locale.py
